added initial code and styling for hero, front page and nav

--- a/themes/first-reviews/sass/style.scss
+++ b/themes/first-reviews/sass/style.scss
@@ -25,6 +25,7 @@ Text Domain: first-reviews
 @import 'components/buttons';
 @import 'components/carousel';
 @import 'components/slider';
+@import 'components/hero';
 
 @import 'pages/home';
 @import 'pages/about';
