--- a/themes/first-reviews/sass/themes/_theme.scss
+++ b/themes/first-reviews/sass/themes/_theme.scss
@@ -1,3 +1,10 @@
 body {
-  background-color: pink;
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+}
+
+.container {
+  width: 1140px;
+  margin: 0 auto;
 }
