--- a/themes/first-reviews/sass/pages/_home.scss
+++ b/themes/first-reviews/sass/pages/_home.scss
@@ -68,3 +68,53 @@
   margin-bottom: 15px;
   flex-direction: column;
 }
+
+.latest-reviews {
+
+  h1 {
+    margin: 30px 0;
+  }
+
+  .post-container {
+    display: flex;
+  }
+
+  .thumbnail {
+    width: 30%;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  .post-text {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    padding: 0px 30px;
+    justify-content: center;
+
+
+    i {
+      color: black;
+    }
+    h1 {
+      margin-bottom: 5px;
+    }
+    h5 {
+      margin-bottom: 10px;
+    }
+    h4 {
+      margin-top: 20px;
+    }
+    .btn {
+      width: 90px;
+      margin-top: 20px;
+    }
+  }
+
+
+
+
+}
