--- a/themes/first-reviews/style.css
+++ b/themes/first-reviews/style.css
@@ -182,6 +182,47 @@ em {
       -ms-flex-direction: column;
           flex-direction: column; }
 
+.latest-reviews h1 {
+  margin: 30px 0; }
+
+.latest-reviews .post-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.latest-reviews .thumbnail {
+  width: 30%; }
+  .latest-reviews .thumbnail img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover; }
+
+.latest-reviews .post-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 70%;
+  padding: 0px 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .latest-reviews .post-text i {
+    color: black; }
+  .latest-reviews .post-text h1 {
+    margin-bottom: 5px; }
+  .latest-reviews .post-text h5 {
+    margin-bottom: 10px; }
+  .latest-reviews .post-text h4 {
+    margin-top: 20px; }
+  .latest-reviews .post-text .btn {
+    width: 90px;
+    margin-top: 20px; }
+
 body {
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
