--- a/themes/first-reviews/sass/themes/_theme.scss
+++ b/themes/first-reviews/sass/themes/_theme.scss
@@ -1,6 +1,6 @@
 body {
   background-color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 16px;
 }
 
