--- a/themes/first-reviews/sass/pages/_home.scss
+++ b/themes/first-reviews/sass/pages/_home.scss
@@ -1,5 +1,7 @@
+.featured {
+  background-color: #1d1d1d;
+}
 .featured-container {
-  background-color: silver;
   padding: 50px;
   display: flex;
   justify-content: center;
@@ -12,6 +14,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: 0.85;
   }
   .text {
     position: absolute;
@@ -24,6 +27,13 @@
     i {
       color: gold;
       font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    h2 {
+      color: white;
+      font-size: 3.5rem;
+      font-weight: 600;
+      text-transform: uppercase;
       margin-bottom: 10px;
     }
     h3 {
@@ -40,24 +50,39 @@
   display: flex;
   flex-direction: column;
   padding: 20px 0px 20px 30px;
+  color: white;
 
   h1 {
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
   }
 
   .rating {
     display: flex;
     justify-content: center;
-  }
-
-  h4 {
-    margin: 10px 0;
+    color: gold;
   }
 
   .btn {
     width: 100px;
+  }
+
+  p {
+    line-height: 1.5;
+    word-spacing: 2px;
+    padding: 0px 15px;
+  }
+
+  a {
+    color: gold;
+    text-decoration: none;
+    &:hover {
+      opacity: 0.8;
+    }
+    &:visited {
+      color: gold;
+    }
   }
 }
 
@@ -65,8 +90,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   flex-direction: column;
+}
+
+.featured-post-info {
+  padding-right: 30px;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+  font-size: 0.9rem;
 }
 
 .latest-reviews {
@@ -95,7 +128,6 @@
     padding: 0px 30px;
     justify-content: center;
 
-
     i {
       color: black;
     }
@@ -113,8 +145,4 @@
       margin-top: 20px;
     }
   }
-
-
-
-
 }
