--- a/themes/first-reviews/style.css
+++ b/themes/first-reviews/style.css
@@ -138,8 +138,10 @@ nav {
   margin: 0 auto;
   padding-top: 25px; }
 
+.featured {
+  background-color: #1d1d1d; }
+
 .featured-container {
-  background-color: silver;
   padding: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -155,7 +157,8 @@ nav {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
-       object-fit: cover; }
+       object-fit: cover;
+    opacity: 0.85; }
   .featured-image .text {
     position: absolute;
     bottom: 10%;
@@ -177,6 +180,12 @@ nav {
       color: gold;
       font-size: 2.5rem;
       margin-bottom: 10px; }
+    .featured-image .text h2 {
+      color: white;
+      font-size: 3.5rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      margin-bottom: 10px; }
     .featured-image .text h3 {
       color: white;
       text-transform: uppercase;
@@ -192,22 +201,33 @@ nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 20px 0px 20px 30px; }
+  padding: 20px 0px 20px 30px;
+  color: white; }
   .featured-text h1 {
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: bold;
-    margin-bottom: 5px; }
+    margin-bottom: 15px; }
   .featured-text .rating {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
-            justify-content: center; }
-  .featured-text h4 {
-    margin: 10px 0; }
+            justify-content: center;
+    color: gold; }
   .featured-text .btn {
     width: 100px; }
+  .featured-text p {
+    line-height: 1.5;
+    word-spacing: 2px;
+    padding: 0px 15px; }
+  .featured-text a {
+    color: gold;
+    text-decoration: none; }
+    .featured-text a:hover {
+      opacity: 0.8; }
+    .featured-text a:visited {
+      color: gold; }
 
 .featured-title {
   display: -webkit-box;
@@ -219,11 +239,22 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column; }
+
+.featured-post-info {
+  padding-right: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 20px;
+  font-size: 0.9rem; }
 
 .latest-reviews h1 {
   margin: 30px 0; }
