--- a/themes/first-reviews/sass/pages/_home.scss
+++ b/themes/first-reviews/sass/pages/_home.scss
@@ -103,13 +103,19 @@
 }
 
 .latest-reviews {
+  margin-bottom: 50px;
 
-  h1 {
-    margin: 30px 0;
+  hr {
+    opacity: 0.7;
+  }
+
+  hr:last-child {
+    display: none;
   }
 
   .post-container {
     display: flex;
+    margin: 30px 0px;
   }
 
   .thumbnail {
@@ -145,4 +151,18 @@
       margin-top: 20px;
     }
   }
+}
+
+.main-split {
+  display: flex;
+  &:nth-child(1) {
+    width: 80%;
+  }
+  &:nth-child(2) {
+    width: 20%;
+  }
+}
+
+.main-title {
+  margin: 30px 0;
 }
