--- a/themes/first-reviews/style.css
+++ b/themes/first-reviews/style.css
@@ -115,6 +115,10 @@ nav {
   nav .current-menu-item a {
     color: gold; }
 
+.sidebar a {
+  color: black;
+  text-decoration: none; }
+
 .btn {
   background-color: black;
   border: none;
@@ -256,46 +260,60 @@ nav {
   margin-top: 20px;
   font-size: 0.9rem; }
 
-.latest-reviews h1 {
-  margin: 30px 0; }
+.latest-reviews {
+  margin-bottom: 50px; }
+  .latest-reviews hr {
+    opacity: 0.7; }
+  .latest-reviews hr:last-child {
+    display: none; }
+  .latest-reviews .post-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 30px 0px; }
+  .latest-reviews .thumbnail {
+    width: 30%; }
+    .latest-reviews .thumbnail img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover; }
+  .latest-reviews .post-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 70%;
+    padding: 0px 30px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    .latest-reviews .post-text i {
+      color: black; }
+    .latest-reviews .post-text h1 {
+      margin-bottom: 5px; }
+    .latest-reviews .post-text h5 {
+      margin-bottom: 10px; }
+    .latest-reviews .post-text h4 {
+      margin-top: 20px; }
+    .latest-reviews .post-text .btn {
+      width: 90px;
+      margin-top: 20px; }
 
-.latest-reviews .post-container {
+.main-split {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  .main-split:nth-child(1) {
+    width: 80%; }
+  .main-split:nth-child(2) {
+    width: 20%; }
 
-.latest-reviews .thumbnail {
-  width: 30%; }
-  .latest-reviews .thumbnail img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover; }
-
-.latest-reviews .post-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 70%;
-  padding: 0px 30px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
-  .latest-reviews .post-text i {
-    color: black; }
-  .latest-reviews .post-text h1 {
-    margin-bottom: 5px; }
-  .latest-reviews .post-text h5 {
-    margin-bottom: 10px; }
-  .latest-reviews .post-text h4 {
-    margin-top: 20px; }
-  .latest-reviews .post-text .btn {
-    width: 90px;
-    margin-top: 20px; }
+.main-title {
+  margin: 30px 0; }
 
 body {
   background-color: white;
