--- a/themes/first-reviews/sass/pages/_home.scss
+++ b/themes/first-reviews/sass/pages/_home.scss
@@ -2,51 +2,66 @@
   background-color: #1d1d1d;
 }
 .featured-container {
-  padding: 50px;
-  display: flex;
-  justify-content: center;
+  padding: 50px 0px;
+  max-width: 1300px;
+  margin: 0 auto;
+
+  @include lg {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .col-6 {
+    @include lg {
+      max-width: 80%;
+    }
+  }
+
+  .col {
+    padding: 0px;
+  }
 }
 
 .featured-image {
-  width: 50%;
   position: relative;
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.85;
+  display: flex;
+  flex-direction: column-reverse;
+  background-position: center;
+  background-size: cover;
+
+  .black-block {
+    background-color: black;
+    padding-top: 50px;
   }
   .text {
     position: absolute;
-    bottom: 10%;
-    left: 23%;
+    bottom: 25px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    width: calc(100% - 30px);
     align-items: center;
-    flex-direction: column;
+
+    h5 {
+      padding-right: 50px;
+    }
+
     i {
       color: gold;
-      font-size: 2.5rem;
+      font-size: 2rem;
       margin-bottom: 10px;
     }
-    h2 {
-      color: white;
-      font-size: 3.5rem;
-      font-weight: 600;
-      text-transform: uppercase;
-      margin-bottom: 10px;
-    }
+
     h3 {
       color: white;
       text-transform: uppercase;
-      margin: 5px 0px;
       font-weight: bold;
+      font-size: 2rem;
+      padding-left: 50px;
     }
   }
 }
 
 .featured-text {
-  width: 50%;
   display: flex;
   flex-direction: column;
   padding: 20px 0px 20px 30px;
@@ -119,9 +134,11 @@
   }
 
   .thumbnail {
-    width: 30%;
+    max-width: 315px;
+    max-height: 225px;
+
     img {
-      width: 100%;
+      max-width: 100%;
       height: 100%;
       object-fit: cover;
     }
@@ -130,25 +147,32 @@
   .post-text {
     display: flex;
     flex-direction: column;
-    width: 70%;
-    padding: 0px 30px;
-    justify-content: center;
-
+    width: 600px;
+    padding-left: 20px;
+    padding-right: 50px;
+    justify-content: flex-start;
     i {
-      color: black;
+      color: gold;
     }
     h1 {
       margin-bottom: 5px;
+      font-weight: bold;
+      font-size: 1.7rem;
+      padding-bottom: 5px;
     }
-    h5 {
-      margin-bottom: 10px;
+    p {
+      font-weight: 300;
+      font-size: 0.95rem;
+      margin: 15px 0;
     }
     h4 {
-      margin-top: 20px;
+      color: #9d9d9d;
+      font-weight: 400;
+      font-size: 13px;
+      text-transform: uppercase;
     }
-    .btn {
-      width: 90px;
-      margin-top: 20px;
+    span {
+      margin-right: 0.25rem;
     }
   }
 }
