--- a/themes/first-reviews/style.css
+++ b/themes/first-reviews/style.css
@@ -146,58 +146,65 @@ nav {
   background-color: #1d1d1d; }
 
 .featured-container {
-  padding: 50px;
+  padding: 50px 0px;
+  max-width: 1300px;
+  margin: 0 auto; }
+  @media (max-width: 992px) {
+    .featured-container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; } }
+  @media (max-width: 992px) {
+    .featured-container .col-6 {
+      max-width: 80%; } }
+  .featured-container .col {
+    padding: 0px; }
+
+.featured-image {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
-
-.featured-image {
-  width: 50%;
-  position: relative; }
-  .featured-image img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-    opacity: 0.85; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  background-position: center;
+  background-size: cover; }
+  .featured-image .black-block {
+    background-color: black;
+    padding-top: 50px; }
   .featured-image .text {
     position: absolute;
-    bottom: 10%;
-    left: 23%;
+    bottom: 25px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: calc(100% - 30px);
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column; }
+            align-items: center; }
+    .featured-image .text h5 {
+      padding-right: 50px; }
     .featured-image .text i {
       color: gold;
-      font-size: 2.5rem;
-      margin-bottom: 10px; }
-    .featured-image .text h2 {
-      color: white;
-      font-size: 3.5rem;
-      font-weight: 600;
-      text-transform: uppercase;
+      font-size: 2rem;
       margin-bottom: 10px; }
     .featured-image .text h3 {
       color: white;
       text-transform: uppercase;
-      margin: 5px 0px;
-      font-weight: bold; }
+      font-weight: bold;
+      font-size: 2rem;
+      padding-left: 50px; }
 
 .featured-text {
-  width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -272,9 +279,10 @@ nav {
     display: flex;
     margin: 30px 0px; }
   .latest-reviews .thumbnail {
-    width: 30%; }
+    max-width: 315px;
+    max-height: 225px; }
     .latest-reviews .thumbnail img {
-      width: 100%;
+      max-width: 100%;
       height: 100%;
       -o-object-fit: cover;
          object-fit: cover; }
@@ -286,22 +294,30 @@ nav {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 70%;
-    padding: 0px 30px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
+    width: 600px;
+    padding-left: 20px;
+    padding-right: 50px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start; }
     .latest-reviews .post-text i {
-      color: black; }
+      color: gold; }
     .latest-reviews .post-text h1 {
-      margin-bottom: 5px; }
-    .latest-reviews .post-text h5 {
-      margin-bottom: 10px; }
+      margin-bottom: 5px;
+      font-weight: bold;
+      font-size: 1.7rem;
+      padding-bottom: 5px; }
+    .latest-reviews .post-text p {
+      font-weight: 300;
+      font-size: 0.95rem;
+      margin: 15px 0; }
     .latest-reviews .post-text h4 {
-      margin-top: 20px; }
-    .latest-reviews .post-text .btn {
-      width: 90px;
-      margin-top: 20px; }
+      color: #9d9d9d;
+      font-weight: 400;
+      font-size: 13px;
+      text-transform: uppercase; }
+    .latest-reviews .post-text span {
+      margin-right: 0.25rem; }
 
 .main-split {
   display: -webkit-box;
@@ -321,5 +337,5 @@ body {
   font-size: 16px; }
 
 .container {
-  width: 1140px;
+  max-width: 1300px;
   margin: 0 auto; }
