--- a/themes/first-reviews/style.css
+++ b/themes/first-reviews/style.css
@@ -74,6 +74,12 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center; }
+  @media (max-width: 992px) {
+    nav {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
   nav a {
     color: white;
     text-decoration: none; }
@@ -119,6 +125,10 @@ nav {
   color: black;
   text-decoration: none; }
 
+@media (max-width: 992px) {
+  .sidebar {
+    display: none; } }
+
 .btn {
   background-color: black;
   border: none;
@@ -160,7 +170,7 @@ nav {
               align-items: center; } }
   @media (max-width: 992px) {
     .featured-container .col-6 {
-      max-width: 80%; } }
+      max-width: 100%; } }
   .featured-container .col {
     padding: 0px; }
 
@@ -170,29 +180,33 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-position: center;
   background-size: cover; }
+  .featured-image img {
+    width: 100%;
+    height: auto; }
   .featured-image .black-block {
     background-color: black;
     padding-top: 50px; }
   .featured-image .text {
+    width: 100%;
     position: absolute;
     bottom: 25px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    width: calc(100% - 30px);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
-    .featured-image .text h5 {
-      padding-right: 50px; }
+            align-items: center;
+    text-shadow: 1px 1px 1px rgba(16, 16, 16, 0.8);
+    z-index: 1; }
     .featured-image .text i {
       color: gold;
       font-size: 2rem;
@@ -201,8 +215,19 @@ nav {
       color: white;
       text-transform: uppercase;
       font-weight: bold;
-      font-size: 2rem;
-      padding-left: 50px; }
+      font-size: 3rem;
+      letter-spacing: 1px;
+      margin-bottom: 5px; }
+
+.featured-image::after {
+  display: block;
+  position: relative;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(16, 16, 16, 0)), to(#101010));
+  background-image: linear-gradient(180deg, rgba(16, 16, 16, 0) 0, #101010);
+  margin-top: -150px;
+  height: 150px;
+  width: 100%;
+  content: ''; }
 
 .featured-text {
   display: -webkit-box;
@@ -218,6 +243,9 @@ nav {
     font-size: 1.3rem;
     font-weight: bold;
     margin-bottom: 15px; }
+    @media (max-width: 992px) {
+      .featured-text h1 {
+        display: none; } }
   .featured-text .rating {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -226,6 +254,9 @@ nav {
         -ms-flex-pack: center;
             justify-content: center;
     color: gold; }
+    @media (max-width: 992px) {
+      .featured-text .rating {
+        display: none; } }
   .featured-text .btn {
     width: 100px; }
   .featured-text p {
@@ -278,6 +309,16 @@ nav {
     display: -ms-flexbox;
     display: flex;
     margin: 30px 0px; }
+    @media (max-width: 992px) {
+      .latest-reviews .post-container {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        margin: 0; } }
   .latest-reviews .thumbnail {
     max-width: 315px;
     max-height: 225px; }
@@ -294,12 +335,15 @@ nav {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 600px;
+    max-width: 600px;
     padding-left: 20px;
     padding-right: 50px;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start; }
+    @media (max-width: 992px) {
+      .latest-reviews .post-text {
+        padding: 0 15px; } }
     .latest-reviews .post-text i {
       color: gold; }
     .latest-reviews .post-text h1 {
@@ -307,6 +351,10 @@ nav {
       font-weight: bold;
       font-size: 1.7rem;
       padding-bottom: 5px; }
+      @media (max-width: 992px) {
+        .latest-reviews .post-text h1 {
+          margin: 10px 0px;
+          font-size: 1.5rem; } }
     .latest-reviews .post-text p {
       font-weight: 300;
       font-size: 0.95rem;
@@ -325,6 +373,9 @@ nav {
   display: flex; }
   .main-split:nth-child(1) {
     width: 80%; }
+    @media (max-width: 992px) {
+      .main-split:nth-child(1) {
+        width: 100%; } }
   .main-split:nth-child(2) {
     width: 20%; }
 
