--- a/themes/first-reviews/sass/layout/_header.scss
+++ b/themes/first-reviews/sass/layout/_header.scss
@@ -5,7 +5,7 @@ nav {
   justify-content: space-evenly;
   padding: 15px;
   align-items: center;
-  @include lg {
+  @include media-breakpoint-up(lg) {
     flex-direction: column;
   }
   a {
