--- a/themes/first-reviews/sass/layout/_sidebar.scss
+++ b/themes/first-reviews/sass/layout/_sidebar.scss
@@ -3,7 +3,7 @@
     color: black;
     text-decoration: none;
   }
-  @include lg {
+  @include media-breakpoint-down (lg) {
     display: none;
   }
 }
