--- a/themes/first-reviews/sass/style.scss
+++ b/themes/first-reviews/sass/style.scss
@@ -8,12 +8,12 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: first-reviews
 */
 
-@import 'abstracts/variables';
-@import 'abstracts/functions';
-@import 'abstracts/mixins';
 
-@import 'base/reset';
-@import 'base/typography';
+@import 'variables';
+
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
+
+@import 'global';
 
 @import 'layout/grid';
 @import 'layout/header';
@@ -24,14 +24,13 @@ Text Domain: first-reviews
 @import 'components/buttons';
 @import 'components/carousel';
 @import 'components/slider';
-@import 'components/hero';
+@import 'components/hero-with-featured-review';
+
+@import 'templates/default-template';
 
 @import 'pages/home';
 @import 'pages/about';
 @import 'pages/contact';
 @import 'pages/shop';
-
-@import 'themes/theme';
-@import 'themes/admin';
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap');
