--- a/themes/first-reviews/sass/_global.scss
+++ b/themes/first-reviews/sass/_global.scss
@@ -2,7 +2,7 @@ body {
   background-color: white;
   font-family: 'PT Sans Narrow', sans-serif;
   font-size: 16px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .container {
