--- a/themes/first-reviews/sass/_variables.scss
+++ b/themes/first-reviews/sass/_variables.scss
@@ -1,6 +1,18 @@
+  // Breakpoints
+
   $xs: 0;
   $sm: 576px;
   $md: 768px;
   $lg: 992px;
   $xl: 1200px;
   $xxl: 1400px;
+
+  // General Colours
+
+  $darkGrey: #1d1d1d;
+  $gold: gold;
+
+  // Text Colours
+
+  $whiteText: #ffffff;
+
