--- a/themes/first-reviews/sass/_global.scss
+++ b/themes/first-reviews/sass/_global.scss
@@ -2,12 +2,19 @@ body {
   background-color: white;
   font-family: 'PT Sans Narrow', sans-serif;
   font-size: 16px;
+  letter-spacing: 0.3px;
   overflow-x: hidden;
 }
 
 .container {
   max-width: 1300px;
   margin: 0 auto;
+}
+
+.span-page {
+  width: 100vw; 
+  margin-left: calc((100% - 100vw) / 2); 
+  margin-right: calc((100% - 100vw) / 2)
 }
 
 // Typography
