--- a/themes/first-reviews/sass/layout/_header.scss
+++ b/themes/first-reviews/sass/layout/_header.scss
@@ -10,6 +10,8 @@ nav {
   a {
     color: white;
     text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 0.5px;
     &:hover {
       opacity: 0.8;
       color: $gold;
