--- a/themes/first-reviews/sass/templates/_default-template.scss
+++ b/themes/first-reviews/sass/templates/_default-template.scss
@@ -1,9 +1,9 @@
 
 .page-template-default {
 
-  .main-split {
-    width: 100%;
+  .site-main{
     display: flex;
+    flex-wrap: wrap;
   }
 
   .site-main {
@@ -16,8 +16,4 @@
     padding-right: unset;
     
   }
-}
-
-.main-title {
-  margin: 30px 0;
 }
