--- a/themes/first-reviews/sass/components/_sidebar.scss
+++ b/themes/first-reviews/sass/components/_sidebar.scss
@@ -1,12 +1,39 @@
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 108px;
+
   a {
     color: black;
     text-decoration: none;
   }
+
   @include media-breakpoint-down (lg) {
     display: none;
   }
-  .main-title {
-    margin: 30px 0;
+  .title {
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+    font-weight: bold;
+    font-style: italic;
+    &:after {
+      content: "";
+      display: block;
+      width: 50px;
+      height: 5px;
+      margin-top: .5rem;
+      background: $gold;
+    }
+  }
+  ul {
+    list-style: none;
+    padding: unset;
+
+    li {
+      a {
+        text-decoration: underline;
+      }
+    }
   }
 }
