--- a/themes/first-reviews/style.css
+++ b/themes/first-reviews/style.css
@@ -8590,16 +8590,41 @@ nav {
 .latest-reviews hr {
   opacity: 0.7; }
 
-.sidebar a {
-  color: black;
-  text-decoration: none; }
-
-@media (max-width: 1199.98px) {
-  .sidebar {
-    display: none; } }
-
-.sidebar .main-title {
-  margin: 30px 0; }
+.sidebar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 108px; }
+  .sidebar a {
+    color: black;
+    text-decoration: none; }
+  @media (max-width: 1199.98px) {
+    .sidebar {
+      display: none; } }
+  .sidebar .title {
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+    font-weight: bold;
+    font-style: italic; }
+    .sidebar .title:after {
+      content: "";
+      display: block;
+      width: 50px;
+      height: 5px;
+      margin-top: .5rem;
+      background: gold; }
+  .sidebar ul {
+    list-style: none;
+    padding: unset; }
+    .sidebar ul li a {
+      text-decoration: underline; }
 
 .page-template-default .site-main {
   display: -webkit-box;
@@ -8607,11 +8632,3 @@ nav {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap; }
-
-.page-template-default .site-main {
-  padding-left: unset;
-  padding-right: unset; }
-
-.page-template-default .sidebar {
-  padding-left: unset;
-  padding-right: unset; }
