--- a/themes/first-reviews/sass/components/_sidebar.scss
+++ b/themes/first-reviews/sass/components/_sidebar.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 108px;
+  padding-top: 108px;
 
   a {
     color: black;
