--- a/themes/first-reviews/style.css
+++ b/themes/first-reviews/style.css
@@ -8535,7 +8535,7 @@ nav {
   .latest-reviews .title:after {
     content: "";
     display: block;
-    width: 50px;
+    width: 128px;
     height: 5px;
     margin-top: .5rem;
     background: gold; }
@@ -8601,7 +8601,7 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 108px; }
+  padding-top: 108px; }
   .sidebar a {
     color: black;
     text-decoration: none; }
