--- a/themes/first-reviews/sass/layout/_header.scss
+++ b/themes/first-reviews/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 nav {
-  background-color: black;
-  color: white;
+  background-color: $black;
+  color: $whiteText;
   display: flex;
   list-style: none;
   justify-content: space-evenly;
@@ -8,7 +8,7 @@ nav {
   align-items: center;
 
   a {
-    color: white;
+    color: $whiteText;
     text-decoration: none;
     font-weight: bold;
     letter-spacing: 0.5px;
@@ -35,7 +35,7 @@ nav {
     i {
       padding-right: 25px;
       &:hover {
-        color: gold;
+        color: $gold;
       }
     }
   }
@@ -53,7 +53,7 @@ nav {
   }
   .current-menu-item {
     a {
-      color: gold;
+      color: $gold;
     }
   }
 }
