--- a/themes/first-reviews/sass/components/_latest-reviews.scss
+++ b/themes/first-reviews/sass/components/_latest-reviews.scss
@@ -44,8 +44,19 @@
         }
       }
 
-      .rating {
+      .subtitle {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        i {
         color: $gold;
+        }
+        a {
+          color: $lightGrey;
+          font-size: 16px;
+          font-style: italic;
+
+        }
       }
 
       p {
